Add [compute residul] function to Class_1_Make fourier img

--- a/Process_1_Prepare_sample_point/Sub_Process_2_Create_Samples_from_50000/Python_Script/Version_1_arcpy_Sampling_From_50K.ipynb
+++ b/Process_1_Prepare_sample_point/Sub_Process_2_Create_Samples_from_50000/Python_Script/Version_1_arcpy_Sampling_From_50K.ipynb
@@ -2,34 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-=======
-   "execution_count": 4,
->>>>>>> 32f2ccbf7c7c97970d3d0fb1e39f6639ec4a4f29
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'arcpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-a675bda100a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0marcpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'arcpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-<<<<<<< HEAD
-=======
     "\n",
->>>>>>> 32f2ccbf7c7c97970d3d0fb1e39f6639ec4a4f29
     "import collections\n",
     "import random\n",
     "\n",
@@ -47,8 +28,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Calculate the area percentage of each-NDVI value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### First access the points that have extracted NDVI value with"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -375,11 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
    "version": "3.6.8"
-=======
-   "version": "3.8.2"
->>>>>>> 32f2ccbf7c7c97970d3d0fb1e39f6639ec4a4f29
   }
  },
  "nbformat": 4,
