--- a/Process_2_GEE_Python_Classification/BackGround_modules/Class_1_Make_fourier_imgs.ipynb
+++ b/Process_2_GEE_Python_Classification/BackGround_modules/Class_1_Make_fourier_imgs.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,10 @@
     "    \n",
     "    '''This class create Fourier_image according to time range, harmonic number and indexse.\n",
     "\n",
-    "    For input:1) start_date and end_date is a string like '2017-01-01'.\n",
-    "              2) hamornics = 3\n",
-    "              3) Normalized_Index = ['NDVI','NDBI','EVI']\n",
+    "    1) start_date and end_date is a string like '2017-01-01'.\n",
+    "    2) hamornics = 3\n",
+    "    3) Normalized_Index = ['NDVI','NDBI','EVI']\n",
     "\n",
-    "    For output: 1) the output is a list of [[fig_orginal_ndvi,fig_fit_ndvi],\n",
-    "                                            [fig_orginal_ndbi,fig_fit_ndbi],\n",
-    "                                            [fig_orginal_evi,fig_fit_evi]]\n",
-    "                2) the Stp_4_Make_a_figure function take the default point = (116.3, 38.5)\n",
     "                \n",
     "                \n",
     "    __________________________An example of how to use this class____________________\n",
@@ -63,8 +59,18 @@
     "    # Step_4 is not necessary for the analysis.\n",
     "    #test.Stp_4_Make_a_figure()\n",
     "    \n",
+    "    #____________OUT_PUT______________\n",
+    "    \n",
     "    # get the Fourier img.\n",
     "    Fourier_img = test.harmonicTrendCoefficients\n",
+    "    \n",
+    "    # get the Residule img.\n",
+    "    Residule_img = test.harmonicTrendResidule\n",
+    "    \n",
+    "    # get discrete original/fitted Normalized value\n",
+    "    # for example\n",
+    "    Original_NDVI_series = test.harmonicLandsat.select(['NDVI'])\n",
+    "    Fitted_NDVI_series   = test.fittedHarmonic['NDVI']\n",
     "    ____________________________________________________________________________________\n",
     "    '''    \n",
     "   \n",
@@ -117,24 +123,11 @@
     "        self.sinNames = ['sin_' + str(i) for i in self.harmonicFrequencies]\n",
     "        self.sinuate_and_constant = self.cosNames +  self.sinNames + ['constant','t']\n",
     "        \n",
-    "        # create necessary names for harmonic fitting of different indexes.\n",
-    "        Independents_variable_names = []\n",
+    "        # Add normalized index ahead of all sin/cos names.\n",
+    "        self.Independents_variable_names = [f'{index}_{sin_cos_name}' \n",
+    "                                            for index in self.Normalized_Index\n",
+    "                                            for sin_cos_name in self.sinuate_and_constant]\n",
     "\n",
-    "        for index in self.Normalized_Index:\n",
-    "\n",
-    "            tmp_name_list = []\n",
-    "            index_constant = [index + '_' + 'constant']\n",
-    "            index_t = [index + '_' + 't']\n",
-    "            \n",
-    "            for sin_cos in zip(self.cosNames,self.sinNames):\n",
-    "\n",
-    "                index_sin = index + '_' + sin_cos[1]\n",
-    "                index_con = index + '_' + sin_cos[0]\n",
-    "\n",
-    "                tmp_name_list.extend([index_sin,index_con])\n",
-    "\n",
-    "            Independents_variable_names = Independents_variable_names + tmp_name_list + index_constant + index_t\n",
-    "        self.Independents_variable_names = Independents_variable_names\n",
     "\n",
     "    def Stp_2_Add_harmonics(self):\n",
     "        \n",
@@ -179,26 +172,27 @@
     "                # Make an image of frequencies.\n",
     "                self.frequencies = ee.Image.constant(i);\n",
     "                # This band should represent time in radians.\n",
-    "                time = ee.Image(image).select('t')\n",
+    "                time    = ee.Image(image).select('t')\n",
     "                # Get the cosine terms.\n",
     "                cosines = time.multiply(self.frequencies).cos().rename(self.cosNames[i-1])\n",
     "                # Get the sin terms.\n",
-    "                sines = time.multiply(self.frequencies).sin().rename(self.sinNames[i-1])\n",
+    "                sines   = time.multiply(self.frequencies).sin().rename(self.sinNames[i-1])\n",
     "                # add cos and sin bands to image\n",
-    "                image = image.addBands(cosines).addBands(sines)\n",
+    "                image   = image.addBands(cosines).addBands(sines)\n",
     "            return image\n",
     "        \n",
     "        # apply all the functions\n",
     "        self.harmonicLandsat = self.Landsat_img_be_analized.map(lambda x: add_NDVI(x))\\\n",
-    "                                         .map(lambda x: add_NDBI(x))\\\n",
-    "                                         .map(lambda x: add_EVI(x)) \\\n",
-    "                                         .map(lambda x: addConstant(x))  \\\n",
-    "                                         .map(lambda x: addTime(x))      \\\n",
-    "                                         .map(lambda x: addHarmonics(x))\n",
+    "                                                           .map(lambda x: add_NDBI(x))\\\n",
+    "                                                           .map(lambda x: add_EVI(x)) \\\n",
+    "                                                           .map(lambda x: addConstant(x))  \\\n",
+    "                                                           .map(lambda x: addTime(x))      \\\n",
+    "                                                           .map(lambda x: addHarmonics(x))\n",
     "    def Stp_3_Harmonic_fit(self):\n",
     "        \n",
     "        harmonicTrendCoefficients_list = []\n",
-    "        fittedHarmonic_list = []\n",
+    "        residule_list = []\n",
+    "        fittedHarmonic_dict = {}\n",
     "\n",
     "        for idx in self.Normalized_Index:\n",
     "\n",
@@ -213,23 +207,30 @@
     "                    .reduce(ee.Reducer.linearRegression(ee.List(self.sinuate_and_constant).length(), 1)) \n",
     "\n",
     "            # Turn the array image into a multi-band image of coefficients.\n",
+    "            # 1) get the coefficients\n",
     "            harmonicTrendCoefficients = harmonicTrend.select('coefficients').arrayProject([0]).arrayFlatten([independents])\n",
-    "\n",
+    "            # 2) get the residuls\n",
+    "            harmonicTrendResidules    = harmonicTrend.select('residuals').arrayProject([0]).arrayFlatten([[f'{idx}_residule']])\n",
     "\n",
     "            # Compute fitted values.\n",
     "            # the essense here is using (independents) matrix to multiply the (coefficients) matrix.\n",
-    "            fittedHarmonic = self.harmonicLandsat.map(lambda image:    \\\n",
+    "            fittedHarmonic_dict[idx] = self.harmonicLandsat.map(lambda image:    \\\n",
     "                                         image.addBands(image.select(self.sinuate_and_constant)     \\\n",
-    "                                                             .multiply(harmonicTrendCoefficients)      \\\n",
-    "                                                             .reduce('sum')                               \\\n",
+    "                                                             .multiply(harmonicTrendCoefficients)   \\\n",
+    "                                                             .reduce('sum')                         \\\n",
     "                                                             .rename(fit_name)))\n",
-    "\n",
+    "            \n",
+    "            # add the result into list\n",
+    "            residule_list.append(harmonicTrendResidules)\n",
     "            harmonicTrendCoefficients_list.append(harmonicTrendCoefficients)\n",
-    "            fittedHarmonic_list.append(fittedHarmonic.select([idx,fit_name]))\n",
-    "                                                      \n",
+    " \n",
+    "        \n",
+    "        # multiply all computated by 1000 and convet them into a Signed-16 interge to reduce space.\n",
     "        self.harmonicTrendCoefficients = ee.Image(harmonicTrendCoefficients_list).multiply(1000).toInt16()\n",
-    "        self.fittedHarmonic_list = fittedHarmonic_list\n",
-    "    \n",
+    "        self.harmonicTrendResidule     = ee.Image(residule_list).multiply(1000).toInt16()\n",
+    "        self.fittedHarmonic            = fittedHarmonic_dict\n",
+    "        \n",
+    "        \n",
     "    def Stp_4_Make_a_figure(self,point = (116.3, 38.5)):\n",
     "        \n",
     "        # Select a arbitrary point in the map.\n",
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -563,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
