--- a/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_2_Determine_best_(year_range,Fourier_num)_from_2017_2019_Fourier_img.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_2_Determine_best_(year_range,Fourier_num)_from_2017_2019_Fourier_img.ipynb
@@ -159,30 +159,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step_1_Determine the best Harmonic number"
+    "### Step_1_Calculate the accuracy of Fourier-img with differen Harmonic number in  2017-2019"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use if condition to find out the right Landsat img formulation\n",
-    "# here use Landsat Raw data because the simplecloudComposite \n",
-    "# algorithm can be easily applied to it.\n",
-    "\n",
-    "# use the end_year as threshold\n",
-    "end_year = int(year_name.split('_')[1])\n",
-    "\n",
-    "if  end_year  <= 2010:\n",
-    "    Landsat_img = ee.ImageCollection(\"LANDSAT/LT05/C01/T1\")\n",
-    "\n",
-    "elif end_year <= 2013:\n",
-    "    Landsat_img = ee.ImageCollection(\"LANDSAT/LE07/C01/T1\")\n",
-    "\n",
-    "else:\n",
-    "    Landsat_img = ee.ImageCollection(\"LANDSAT/LC08/C01/T1\")"
+    "# Fetch the Fourier-img of different Harmonic number\n",
+    "Fourier_diff_harmonic = [ee.Image(f'{path}/Fourier_img_{year_name}_harmonic_{harmonic}')\n",
+    "                            for path in ['users/wang8052664/North_China_Plain/Fourier_imgs']\n",
+    "                            for harmonic in range(1,6)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test if we have the access to the Fourier img\n",
+    "for img in Fourier_diff_harmonic:\n",
+    "    try:\n",
+    "        img.getInfo()\n",
+    "    except:\n",
+    "        print(f'Check if you have access of {img}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test"
    ]
   },
   {
@@ -204,48 +230,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Extract the Fourier_pixel_value to sample points\n",
-    "# 1) using year_range to make Fourier_img\n",
-    "# 2) for each Forier_img, try harmonic number of [1-5]\n",
-    "\n",
-    "\n",
-    "    \n",
-    "for harmonic in range(1,6):\n",
-    "\n",
-    "    # define the asset path for exporting\n",
-    "    asset_path = 'users/wang8052664/North_China_Plain/Fourier_imgs'\n",
-    "    # define the name for exporting\n",
-    "    extract_name = f'Fourier_img_{year_name}_harmonic_{harmonic}'\n",
-    "\n",
-    "\n",
-    "    # make the Fourier img, the default is to make time series\n",
-    "    # of ['NDVI', 'NDBI', 'EVI']\n",
-    "    Fourier_making = Make_Fourier( start_date = start_time,\n",
-    "                                   end_date   = end_time,\n",
-    "                                   harmonics  = harmonic )\n",
-    "\n",
-    "    # Go through the Fourier img making process\n",
-    "    Fourier_making.Stp_1_Create_hamonic_names()\n",
-    "    Fourier_making.Stp_2_Add_harmonics()\n",
-    "    Fourier_making.Stp_3_Harmonic_fit()\n",
-    "\n",
-    "    # Get the Fourier img\n",
-    "    Fourier_img = Fourier_making.harmonicTrendCoefficients\n",
-    "\n",
-    "    # export the Fourier img\n",
-    "    task = ee.batch.Export.image.toAsset( \n",
-    "                                                image          = Fourier_img,\n",
-    "                                                description    = f'Exporting {extract_name}',\n",
-    "                                                assetId        = f'{asset_path}/{extract_name}',\n",
-    "                                                region         = North_china_plain_boundary.geometry().bounds(),\n",
-    "                                                scale          = 30,\n",
-    "                                                maxPixels      = int(1e13))\n",
-    "    task.start()\n",
-    "\n",
-    "    # print out the process\n",
-    "    print(f'Exporting {asset_path}/{extract_name}')"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -263,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -342,16 +362,16 @@
     "    Fourier_img = Fourier_making.harmonicTrendCoefficients\n",
     "    \n",
     "    # Export the fourier_img to GEE_asset\n",
-    "    task = ee.batch.Export.image.toAsset(   image       = Fourier_img,\n",
-    "                                            description = f'Exporting {extract_name} ',\n",
-    "                                            assetId     = f'{asset_bucket}/{extract_name}',\n",
+    "#     task = ee.batch.Export.image.toAsset(   image       = Fourier_img,\n",
+    "#                                             description = f'Exporting {extract_name} ',\n",
+    "#                                             assetId     = f'{asset_bucket}/{extract_name}',\n",
     "                                            \n",
     "                                            \n",
-    "                                            region      = North_china_plain_boundary.geometry(),\n",
-    "                                            scale       = 30,\n",
+    "#                                             region      = North_china_plain_boundary.geometry(),\n",
+    "#                                             scale       = 30,\n",
     "                                            \n",
-    "                                            maxPixels   = int(1e13))\n",
-    "    task.start()\n",
+    "#                                             maxPixels   = int(1e13))\n",
+    "#     task.start()\n",
     "    \n",
     "    # print out the process\n",
     "    print(extract_name)"
@@ -416,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
