--- a/Process_2_GEE_Python_Classification/Sub_Process_2_Extract_Fourier_Landsat_Supply_value_to_sample_pts/Extract_img_value_to_sample_points_and_calculate_accuracy.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_2_Extract_Fourier_Landsat_Supply_value_to_sample_pts/Extract_img_value_to_sample_points_and_calculate_accuracy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,6 @@
     "import itertools\n",
     "import sys\n",
     "\n",
-    "from pprint import pprint\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,32 +98,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the time-range\n",
-    "start_time = '2017-01-01'\n",
-    "end_time   = '2019-12-31'\n",
+    "# define the year range\n",
+    "year_start = [f'{i}-01-01' for i in range(1987,2020,3)]\n",
+    "year_end   = [f'{i}-12-31' for i in range(1989,2020,3)]\n",
     "\n",
-    "# Create the year_name for naming variables\n",
-    "year_name = f'{start_time[:4]}_{end_time[:4]}'\n",
+    "year_range = list(zip(year_start,year_end))\n",
     "\n",
-    "# Define the interval for looping\n",
-    "Interval_index = [1] + list(range(0,121,10))[1:] "
+    "# import the research area boundary\n",
+    "North_China_Plain = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain/0_1_North_China_Plain_Full\")\n",
+    "\n",
+    "# import verified points\n",
+    "Verified_Point_2017_2019   = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_2017_2019\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('1987-01-01', '1989-12-31'),\n",
+       " ('1990-01-01', '1992-12-31'),\n",
+       " ('1993-01-01', '1995-12-31'),\n",
+       " ('1996-01-01', '1998-12-31'),\n",
+       " ('1999-01-01', '2001-12-31'),\n",
+       " ('2002-01-01', '2004-12-31'),\n",
+       " ('2005-01-01', '2007-12-31'),\n",
+       " ('2008-01-01', '2010-12-31'),\n",
+       " ('2011-01-01', '2013-12-31'),\n",
+       " ('2014-01-01', '2016-12-31'),\n",
+       " ('2017-01-01', '2019-12-31')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# import some spatial constrains\n",
-    "North_china_plain_boundary = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain/0_1_North_China_Plain_Full\")\n",
-    "\n",
-    "# import verified points\n",
-    "Verified_Point_2017_2019   = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_2017_2019\")"
+    "year_range"
    ]
   },
   {
@@ -143,16 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import Landsat img\n",
-    "Landsat_img = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Cloud_Free_Img/Cloud_Free_2017_2019\").clip(North_china_plain_boundary)\n",
-    "Landsat_img_band = Landsat_img.bandNames().getInfo()\n",
+    "Landsat_img = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Cloud_Free_Img/Cloud_Free_2017_2019\").clip(North_China_Plain)\n",
     "\n",
     "# import Fourier img   \n",
-    "Fourier_img = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Fourier_pixels/Fourier_Range_3_Year_2017_2019\").clip(North_china_plain_boundary)\n",
+    "Fourier_img = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Fourier_pixels/Fourier_Range_3_Year_2017_2019\").clip(North_China_Plain)\n",
     "\n",
     "# Import the Sentinel img\n",
     "# Sentinel_img =  ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Supply_img/Sentinel_2019_mean\")\n",
@@ -162,11 +179,27 @@
     "# Import the Index-mean Img\n",
     "NDVI_img = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Supply_img/Year_2017_2019_Spectrum_NDVI\").rename('Nomalized_NDVI')\n",
     "NDBI_img = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Supply_img/Year_2017_2019_Spectrum_NDBI\").rename('Nomalized_NDBI')\n",
-    "EVI_img  = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Supply_img/Year_2017_2019_Spectrum_EVI\").rename('Nomalized_EVI')\n",
-    "\n",
+    "EVI_img  = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Supply_img/Year_2017_2019_Spectrum_EVI\").rename('Nomalized_EVI')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# put all band names together\n",
     "Overlay_img      = ee.Image([Fourier_img,NDVI_img,NDBI_img,EVI_img])\n",
     "Overlay_img_band = Overlay_img.bandNames().getInfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import Nomalized-diff img\n"
    ]
   },
   {
@@ -282,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
