start to compute best Harmonic number

--- a/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_2_Detemine the best Harmonic number.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_2_Detemine the best Harmonic number.ipynb
@@ -30,29 +30,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ee.Initialize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ee.Initialize()\n",
+    "\n",
     "# append the parent path into sys-path so wen can import necessary modules\n",
     "sys.path.append('../')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,22 +96,10 @@
     "year_name = f'{start_time[:4]}_{end_time[:4]}'\n",
     "\n",
     "# Define the interval for random classifier tree_num test\n",
-    "Interval_index = [1] + list(range(0,121,10))[1:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Interval_index = [1] + list(range(0,121,10))[1:]\n",
+    "\n",
+    "\n",
+    "\n",
     "# import some spatial constrains\n",
     "North_china_plain_boundary = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\")\n",
     "\n",
@@ -156,44 +123,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step_1_Calculate the accuracy of Fourier-img with differen Harmonic number in  2017-2019"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fetch the Fourier-img of different Harmonic number\n",
-    "Fourier_diff_harmonic = [ee.Image(f'{path}/Fourier_img_{year_name}_harmonic_{harmonic}')\n",
-    "                            for path in ['users/wang8052664/North_China_Plain/Fourier_imgs']\n",
-    "                            for harmonic in range(1,6)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test if we have the access to the Fourier img\n",
-    "for img in Fourier_diff_harmonic:\n",
-    "    try:\n",
-    "        img.getInfo()\n",
-    "    except:\n",
-    "        print(f'Check if you have access of {img}')"
-   ]
   },
   {
    "cell_type": "code",
@@ -207,9 +141,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "test"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -275,24 +235,18 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "### Step_2_Determine the best Year_range"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# first define the year range\n",
-    "start = [f'{i}-01-01' for i in range(2015,2020)]\n",
-    "end   = ['2019-12-31' ] * 5\n",
-    "\n",
-    "year_range = list(zip(start,end))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -310,72 +264,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Analyzing the images of 2015_2019\n",
-      "Fourier_Range_5_Year_2015_2019\n",
-      "Analyzing the images of 2016_2019\n",
-      "Fourier_Range_4_Year_2016_2019\n",
-      "Analyzing the images of 2017_2019\n",
-      "Fourier_Range_3_Year_2017_2019\n",
-      "Analyzing the images of 2018_2019\n",
-      "Fourier_Range_2_Year_2018_2019\n",
-      "Analyzing the images of 2019_2019\n",
-      "Fourier_Range_1_Year_2019_2019\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Export different year_range fourier img to GEE_asset\n",
-    "\n",
-    "for span in year_range:\n",
-    "    \n",
-    "    # define the time span as name for later exporting \n",
-    "    start = span[0].split('-')[0]\n",
-    "    end   = span[1].split('-')[0]\n",
-    "    span_len  = int(end) - int(start) + 1 \n",
-    "\n",
-    "    span_name =  f'{start}_{end}'\n",
-    "    \n",
-    "    # define the asset path for exporting\n",
-    "    asset_bucket = 'users/Jinzhu_Deakin/North_China_Plain/Fourier_img_diff_year_range'\n",
-    "    # define the name for exporting\n",
-    "    extract_name = f'Fourier_Range_{span_len}_Year_{span_name}'\n",
-    "    \n",
-    "    # make the Fourier img, the default is to make time series\n",
-    "    # of ['NDVI', 'NDBI', 'EVI']\n",
-    "    Fourier_making = Make_Fourier( start_date = span[0],\n",
-    "                                   end_date   = span[1],\n",
-    "                                   harmonics  = 3 )\n",
-    "\n",
-    "    # Go through the Fourier img making process\n",
-    "    Fourier_making.Stp_1_Create_hamonic_names()\n",
-    "    Fourier_making.Stp_2_Add_harmonics()\n",
-    "    Fourier_making.Stp_3_Harmonic_fit()\n",
-    "\n",
-    "    # Get the Fourier img\n",
-    "    Fourier_img = Fourier_making.harmonicTrendCoefficients\n",
-    "    \n",
-    "    # Export the fourier_img to GEE_asset\n",
-    "#     task = ee.batch.Export.image.toAsset(   image       = Fourier_img,\n",
-    "#                                             description = f'Exporting {extract_name} ',\n",
-    "#                                             assetId     = f'{asset_bucket}/{extract_name}',\n",
-    "                                            \n",
-    "                                            \n",
-    "#                                             region      = North_china_plain_boundary.geometry(),\n",
-    "#                                             scale       = 30,\n",
-    "                                            \n",
-    "#                                             maxPixels   = int(1e13))\n",
-    "#     task.start()\n",
-    "    \n",
-    "    # print out the process\n",
-    "    print(extract_name)"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
