--- a/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_2_Detemine the best Harmonic number.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_2_Detemine the best Harmonic number.ipynb
@@ -84,28 +84,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('1987-01-01', '1989-12-31'),\n",
+       " ('1990-01-01', '1992-12-31'),\n",
+       " ('1993-01-01', '1995-12-31'),\n",
+       " ('1996-01-01', '1998-12-31'),\n",
+       " ('1999-01-01', '2001-12-31'),\n",
+       " ('2002-01-01', '2004-12-31'),\n",
+       " ('2005-01-01', '2007-12-31'),\n",
+       " ('2008-01-01', '2010-12-31'),\n",
+       " ('2011-01-01', '2013-12-31'),\n",
+       " ('2014-01-01', '2016-12-31'),\n",
+       " ('2017-01-01', '2019-12-31')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the time-range\n",
-    "start_time = '2017-01-01'\n",
-    "end_time   = '2019-12-31'\n",
+    "start_time = [f'{i}-01-01' for i in range(1987,2020,3)]\n",
+    "end_time   = [f'{i}-12-31' for i in range(1989,2020,3)]\n",
     "\n",
-    "# Create the year_name for naming variables\n",
-    "year_name = f'{start_time[:4]}_{end_time[:4]}'\n",
-    "\n",
-    "# Define the interval for random classifier tree_num test\n",
-    "Interval_index = [1] + list(range(0,121,10))[1:]\n",
-    "\n",
-    "\n",
-    "\n",
-    "# import some spatial constrains\n",
-    "North_china_plain_boundary = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\")\n",
-    "\n",
-    "# import verified points\n",
-    "Verified_Point   = ee.FeatureCollection(f\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_{year_name}\")\n",
-    "Verified_Point_with_city_rural = ee.FeatureCollection(f\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_{year_name}_with_20K_city_rural_pts\");"
+    "year_range = list(zip(start_time,end_time))\n",
+    "year_range"
    ]
   },
   {
@@ -116,18 +125,20 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Step_1_Generate Fourier img with different harmonic from 1997-2019"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Make_Fourier"
+   ]
   },
   {
    "cell_type": "code",
@@ -426,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
