Class_1_make fourier, change landsat to TOA

--- a/Process_2_GEE_Python_Classification/BackGround_modules/Class_1_Make_fourier_imgs.ipynb
+++ b/Process_2_GEE_Python_Classification/BackGround_modules/Class_1_Make_fourier_imgs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,19 +87,19 @@
     "        \n",
     "        #______________________________Condition to define the right landsat img collecion__________________________\n",
     "        if self.end_date.get('year').getInfo() <= 2010:\n",
-    "            self.Landsat_img = ee.ImageCollection(\"LANDSAT/LT05/C01/T1\")\n",
+    "            self.Landsat_img = ee.ImageCollection(\"LANDSAT/LT05/C01/T1_TOA\")\n",
     "            self.ND_formula = {'NDVI':['B4','B3'],\n",
     "                          'NDBI':['B5','B4'],\n",
     "                          'EVI':\"2.5 * ((b('B4')-b('B3'))*1.0 / (b('B4')*1.0 + 6.0 * b('B3') - 7.5 * b('B1') + 1.0))\"}\n",
     "\n",
     "        elif self.end_date.get('year').getInfo() <= 2013:\n",
-    "            self.Landsat_img = ee.ImageCollection(\"LANDSAT/LE07/C01/T1\")\n",
+    "            self.Landsat_img = ee.ImageCollection(\"LANDSAT/LE07/C01/T1_TOA\")\n",
     "            self.ND_formula = {'NDVI':['B4','B3'],\n",
     "                          'NDBI':['B5','B4'],\n",
     "                          'EVI':\"2.5 * ((b('B4')-b('B3'))*1.0 / (b('B4')*1.0 + 6.0 * b('B3') - 7.5 * b('B1') + 1.0))\"}\n",
     "\n",
     "        else:\n",
-    "            self.Landsat_img = ee.ImageCollection(\"LANDSAT/LC08/C01/T1\")\n",
+    "            self.Landsat_img = ee.ImageCollection(\"LANDSAT/LC08/C01/T1_TOA\")\n",
     "            self.ND_formula = {'NDVI':['B5','B4'],\n",
     "                          'NDBI':['B6','B5'],\n",
     "                          'EVI':\"2.5 * ((b('B5')-b('B4'))*1.0 / (b('B5')*1.0 + 6.0 * b('B4') - 7.5 * b('B2') + 1.0))\"}\n",
@@ -145,7 +145,7 @@
     "                    .addBands(image.normalizedDifference(self.ND_formula['NDBI']).rename('NDBI'))\n",
     "                    .float()\n",
     "                    )\n",
-    "\n",
+    "        # EVI are derived from TOA products, so here transfor the Raw data into a TOA product.\n",
     "        def add_EVI (image):\n",
     "            return (\n",
     "                    image\n",
@@ -564,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
