Best year_span Harmonic number

--- a/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_2_Detemine the best Harmonic number.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_2_Detemine the best Harmonic number.ipynb
@@ -16043,7 +16043,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing and unpacking year_2015_2019_Harmonic_1!  ==>1/150\n"
+     ]
+    }
+   ],
    "source": [
     "# unpack the point_with_residule dictionary and fectch \n",
     "# only residule information\n",
@@ -16062,6 +16070,8 @@
     "    # loop through harmonics\n",
     "    for harmonic in range(1,harmo_num+1):\n",
     "        \n",
+    "        # update the opration_flag\n",
+    "        ops_num +=1\n",
     "        # print out the process\n",
     "        print(f'Computing and unpacking year_{year}_Harmonic_{harmonic}!  ==>{ops_num}/{ops_total}') \n",
     "        \n",
@@ -16070,8 +16080,7 @@
     "            \n",
     "            try:\n",
     "        \n",
-    "                # update the opration_flag\n",
-    "                ops_num +=1\n",
+    "                \n",
     "                # use getInfo fuction to get the unpack values \n",
     "                unpacked_value = ee.Dictionary(point_with_residule[year][harmonic]).getInfo()\n",
     "\n",
